tests/models/enum/unnamed/isize/pass/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(gt = 2)]
        isize
    ),
}
fn main() {}
