tests/models/enum/unnamed/isize/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2.0)]
        isize
    ),
}
fn main() {}
